# truthcheck

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/truthcheck/: __init__.py  core.py  tokenizer.py
tests/: test_core.py  test_tokenizer.py
