[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "truthcheck"
version = "0.1.0"
description = "A minimal utility to evaluate truthiness and count tokens."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "buckethq", email = "onebucket@proton.me"}
]
dependencies = [
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
    "build>=1.2",
    "twine>=5.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100
lint.select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/truthcheck --cov-report=term-missing"